[package]
name = "cloved"
description = "clove optional daemon: file-watch, incremental index, opt-in git sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cloved"
path = "src/main.rs"

[features]
# git auto-sync (T-D06) is gated so a lean / cross-compiled build stays free of
# vendored libgit2 (DESIGN §1 notes git2's C build blocks the macOS->Windows
# cross-check). Kept in `default` — it is the daemon's core local capability.
default = ["git-sync"]
# `full` adds the periodic two-way GitHub sync loop; the pre-built release
# artifacts build `--features full` so the daemon retains it.
full = ["git-sync", "github-sync"]
git-sync = ["dep:git2"]
# Periodic two-way GitHub sync (T-M06). Now a **dependency-free** gate (like
# `git-sync`): the daemon no longer links octocrab/clove-import — it shells out to
# `clove sync github <repo>`, which resolves the external `clove-sync-github`
# plugin (PLUGIN_SYSTEM.md §8). The feature only decides whether the daemon
# *spawns* that subprocess on its interval. **Opt-out** (not in `default`);
# enable with `--features github-sync` (or `--features full`).
github-sync = []

[dependencies]
clove-types.workspace = true
clove-core.workspace = true
clove-index.workspace = true
clove-ipc.workspace = true
clove-web.workspace = true       # M4: daemon serves the web UI by default
clap.workspace = true
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true       # snapshot timestamps for the auto-snapshot loop (M4)
serde_json.workspace = true
tokio.workspace = true
tarpc.workspace = true        # typed CLI<->daemon RPC service (clove-ipc)
futures.workspace = true      # tarpc channel executor (StreamExt)
interprocess = { workspace = true, features = ["tokio"] }
notify.workspace = true
fd-lock.workspace = true
# git2 is optional and only pulled in under the `git-sync` feature (P5/T-D06).
git2 = { workspace = true, optional = true }

# Windows has no SIGTERM: `clove daemon stop` signals a named event the daemon
# waits on (DESIGN §8.9). Win32 only, so it never touches the Unix build.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    # CreateEventW takes *const SECURITY_ATTRIBUTES, which lives behind
    # Win32_Security; without it windows-sys omits CreateEventW. The msvc build
    # gets this feature by unification, but the windows-gnu target does not, so
    # declare it explicitly (see crates/cloved/src/lifecycle.rs).
    "Win32_Security",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
